overflow x fixed

--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -5,7 +5,7 @@
 .colourChangerBox {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .down-enter-active {
