--- a/styles/style.css
+++ b/styles/style.css
@@ -125,7 +125,7 @@ nav a:hover:after {
 .colourChangerBox {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .down-enter-active {
